fix scrollbard is show in menu

--- a/style.css
+++ b/style.css
@@ -17,11 +17,12 @@ html {
 .menu {
     width: 100%;
     height: 100%;
+    display: grid;
+    grid-template-rows: min(300px,30%) auto;
 }
 
 .title-wrapper {
     display: grid;
-    height: 30%;
     color: #E6EDE5;
     font-family: 'Asap', sans-serif;
     font-size: 1.25rem;
@@ -31,7 +32,7 @@ html {
 }
 
 .form-wrapper {
-    height: 80%;
+    /* height: 80%; */
     display: flex;
     justify-content: center;
 }
